# fl-diabetes-prediction

./: .gitignore  README.md  dataset_split.py  do.ipynb  ds.ipynb  local_training.ipynb  pyproject.toml
dataset/: huggingface_upload.ipynb
dataset/pima-indians-diabetes-database/: README.md  diabetes.csv
dataset/pima-indians-diabetes-database-0/: README.md
dataset/pima-indians-diabetes-database-0/mock/: test.csv  train.csv
dataset/pima-indians-diabetes-database-0/private/: test.csv  train.csv
dataset/pima-indians-diabetes-database-1/mock/: test.csv  train.csv
dataset/pima-indians-diabetes-database-1/private/: test.csv  train.csv
dataset/pima-indians-diabetes-database-2/mock/: test.csv  train.csv
dataset/pima-indians-diabetes-database-2/private/: test.csv  train.csv
dataset/pima-indians-diabetes-database-3/mock/: test.csv  train.csv
dataset/pima-indians-diabetes-database-3/private/: test.csv  train.csv
dataset/pima-indians-diabetes-database-4/mock/: test.csv  train.csv
dataset/pima-indians-diabetes-database-4/private/: test.csv  train.csv
fl-diabetes-prediction/: README.md  pyproject.toml
fl-diabetes-prediction/fl_diabetes_prediction/: client_app.py  server_app.py  task.py
fl_diabetes_prediction/: server_app.py
weights/: parameters_round_0.safetensors  parameters_round_1.safetensors  parameters_round_2.safetensors
