[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "fl-diabetes-prediction"
version = "1.0.0"
description = "Federated Learning for Diabetes Prediction"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]==1.17.0",
    "flwr-datasets>=0.5.0",
    "torch==2.7.0",
    "syft_flwr==0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    ".",
]

[tool.flwr.app]
publisher = "OpenMined"

[tool.flwr.app.components]
serverapp = "fl_diabetes_prediction.server_app:app"
clientapp = "fl_diabetes_prediction.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
partition-id = 0
num-partitions = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation.options]
num-supernodes = 5

[tool.syft_flwr]
datasites = [
    "do1@openmined.org",
    "do2@openmined.org",
    "do3@openmined.org",
    "do4@openmined.org",
    "do5@openmined.org",
]
aggregator = "khoa@openmined.org"
