[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "fl-diabetes-prediction"
version = "1.0.0"
description = "Federated Learning for Diabetes Prediction"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]==1.17.0",
    "flwr-datasets>=0.5.0",
    "torch==2.7.0",
    "imblearn",
    "pandas",
    "scikit-learn==1.6.1",
    "loguru",
    "jupyter",
    "syft_flwr==0.1.1",
]

[tool.hatch.build.targets.wheel]
packages = [
    ".",
]

[tool.flwr.app]
publisher = "OpenMined"

[tool.flwr.app.components]
serverapp = "fl_diabetes_prediction.server_app:app"
clientapp = "fl_diabetes_prediction.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
partition-id = 0
num-partitions = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation.options]
num-supernodes = 2

[tool.syft_flwr]
app_name = "khoa@openmined.org_fl-diabetes-prediction_1748255809"
datasites = [
    "flower-test-group-1@openmined.org",
    "flower-test-group-2@openmined.org",
]
aggregator = "khoa@openmined.org"
